fix footer align

--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -56,5 +56,9 @@
       text-align: center;
       padding: 2rem 1.5rem;
     }
+
+    &__logo {
+      justify-content: center;
+    }
   }
 }
